k8s/hypriot/service.yaml
# Copyright 2016-2018 Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  labels:
    app: hypriot
    provider: jarvis
  name: hypriot
  namespace: hypriot
spec:
  ports:
  - name: hypriot
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hypriot
  type: LoadBalancer
